--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "test init",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "start": "gulp dev",
+    "git-host": "gulp git-host"
   },
   "repository": {
     "type": "git",
@@ -21,13 +23,16 @@
   },
   "homepage": "https://github.com/lBeJIuk/123#readme",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "browser-sync": "^2.18.6",
+    "css-mqpacker": "^5.0.1",
+    "cssnano": "^3.10.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^3.0.4",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.2.0",
     "gulp-less": "^3.3.0",
     "gulp-notify": "^3.0.0",
+    "gulp-postcss": "^6.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-rigger": "^0.5.8",
     "gulp-uglify": "^2.1.2",
