--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gulp build",
     "start": "gulp dev",
-    "git-host": "gulp git-host"
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
